# YiCAD

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
YiCAD/: CMakeLists.txt
YiCAD/res/ribbon/: ribbon_icon.qrc
YiCAD/src/actions/: ActionBlockInsertPrepare.cpp  ActionBlockInsertPrepare.h  ActionBlocksCreate.cpp  ActionBlocksCreate.h  ActionBlocksDelete.cpp  ActionBlocksDelete.h  ActionBlocksEdit.cpp  ActionBlocksEdit.h  ActionBlocksImport.cpp  ActionBlocksImport.h  ActionBlocksInsert.cpp  ActionBlocksInsert.h  ActionBlocksSave.cpp  ActionBlocksSave.h  ActionBlocksSaveAs.cpp  ActionBlocksSaveAs.h  ActionCopyToLayer.cpp  ActionCopyToLayer.h  ActionDefault.cpp  ActionDefault.h  ActionDefineAttributes.cpp  ActionDefineAttributes.h  ActionDimAligned.cpp  ActionDimAligned.h  ActionDimAngular.cpp  ActionDimAngular.h  ActionDimBaseline.cpp  ActionDimBaseline.h  ActionDimDiametric.cpp  ActionDimDiametric.h  ActionDimLeader.cpp  ActionDimLeader.h  ActionDimLinear.cpp  ActionDimLinear.h  ActionDimRadial.cpp  ActionDimRadial.h  ActionDimStyle.cpp  ActionDimStyle.h  ActionDimension.cpp  ActionDimension.h  (+172 more)
YiCAD/src/ai/: AIAssistant.cpp  AIAssistant.h  AIIntentRouter.cpp  AIIntentRouter.h  AIIntentRouterData.cpp  AIIntentRouterData.h  AILLMClassifier.cpp  AILLMClassifier.h  AIPickAction.cpp  AIPickAction.h  AIPickSession.cpp  AIPickSession.h  AIPickTypes.cpp  AIPickTypes.h  AIPipeline.cpp  AIPipeline.h  ChunkSplitter.cpp  ChunkSplitter.h  ContextResolver.cpp  ContextResolver.h  ConversationHistory.cpp  ConversationHistory.h  ConversationStore.cpp  ConversationStore.h  DeepSeekProvider.cpp  DeepSeekProvider.h  DirectEntityExecutor.cpp  DirectEntityExecutor.h  LLMCommandBridge.cpp  LLMCommandBridge.h  LLMSettingsService.cpp  LLMSettingsService.h  ModificationExecutor.cpp  ModificationExecutor.h  RAGPipeline.cpp  RAGPipeline.h  RAGTypes.h  Retriever.cpp  Retriever.h  SecretStorage.cpp  (+1 more)
YiCAD/src/cmd/: Commands.cpp  Commands.h
YiCAD/src/kernel/actions/: ActionInterface.cpp  ActionInterface.h  Preview.cpp  Preview.h  PreviewActionInterface.cpp  PreviewActionInterface.h  Snapper.cpp  Snapper.h
YiCAD/src/kernel/builder_model/: Datamodel.cpp  Datamodel.h  DmArc.cpp  DmArc.h  DmAtomicEntity.cpp  DmAtomicEntity.h  DmBlock.cpp  DmBlock.h  DmBlockReference.cpp  DmBlockReference.h  DmBlockTable.cpp  DmBlockTable.h  DmBlockTableListener.h  DmBoundingBox.cpp  DmBoundingBox.h  DmCachePainter.cpp  DmCachePainter.h  DmCircle.cpp  DmCircle.h  DmClipboard.cpp  DmClipboard.h  DmColor.cpp  DmColor.h  DmConstructionLine.cpp  DmConstructionLine.h  DmDocument.cpp  DmDocument.h  DmEllipse.cpp  DmEllipse.h  DmEntity.cpp  DmEntity.h  DmEntityContainer.cpp  DmEntityContainer.h  DmEntityHelper.cpp  DmEntityHelper.h  DmFlags.cpp  DmFlags.h  DmHatch.cpp  DmHatch.h  DmId.cpp  (+57 more)
YiCAD/src/kernel/data_model/: ArcData.cpp  ArcData.h  BlockReferenceData.cpp  BlockReferenceData.h  CircleData.cpp  CircleData.h  EllipseData.cpp  EllipseData.h  EntityData.cpp  EntityData.h  EntityDataDef.h  HatchData.cpp  HatchData.h  ImageData.cpp  ImageData.h  LineData.cpp  LineData.h  LineStripData.cpp  LineStripData.h  PointData.cpp  PointData.h  PolylineData.cpp  PolylineData.h  RayData.cpp  RayData.h  RegionData.cpp  RegionData.h  SolidData.cpp  SolidData.h  SplineData.cpp  SplineData.h  TriangleData.cpp  TriangleData.h  XLineData.cpp  XLineData.h
YiCAD/src/kernel/debug/: Debug.cpp  Debug.h
YiCAD/src/kernel/fileio/: Fileio.cpp  Fileio.h
YiCAD/src/kernel/filters/: FilterInterface.h  FilterJsonIO.cpp  FilterJsonIO.h  FilterOcdIO.cpp  FilterOcdIO.h
YiCAD/src/kernel/generators/: XMLWriterQXmlStreamWriter.cpp  XMLWriterQXmlStreamWriter.h  XmlWriterInterface.h
YiCAD/src/kernel/gui/: GuiCommandEvent.h  GuiCoordinateEvent.h  GuiDialogFactory.cpp  GuiDialogFactory.h  GuiDialogFactoryAdapter.h  GuiDialogFactoryInterface.h  GuiDocumentView.cpp  GuiDocumentView.h  GuiEventHandler.cpp  GuiEventHandler.h  GuiGrid.cpp  GuiGrid.h  GuiPreviewWidget.cpp  GuiPreviewWidget.h
YiCAD/src/kernel/history/: BlockEditCmd.cpp  BlockEditCmd.h  BlockTableCmd.cpp  BlockTableCmd.h  Cmd.cpp  Cmd.h  CmdManager.cpp  CmdManager.h  DimensionStyleTableCmd.cpp  DimensionStyleTableCmd.h  DmDimensionStyleTable.cpp  DmDimensionStyleTable.h  DmLayerTable.cpp  DmLayerTable.h  DmLineTypeTable.cpp  DmLineTypeTable.h  DmTextStyleTable.h  (+22 more)
YiCAD/src/main/: ApplicationWindow.cpp  ApplicationWindow.h  DbPluginInterface.cpp  DbPluginInterface.h  DocPluginInterface.cpp  DocPluginInterface.h  MDIWindow.cpp  MDIWindow.h  Main.cpp  Main.h  MainWindowx.cpp  MainWindowx.h
YiCAD/src/plugins/: DatabaseInterface.h  DocumentInterface.h  PluginInterface.h
YiCAD/src/ui/: AIDialog.cpp  AIDialog.h  ConversationBrowser.cpp  ConversationBrowser.h  CustomComboboxItem.cpp  CustomComboboxItem.h  LLMSettingsPage.cpp  LLMSettingsPage.h  MTextEditWidget.cpp  MTextEditWidget.h  UIActionGroupManager.cpp  UIActionGroupManager.h  UIActionHandler.cpp  UIActionHandler.h  UIArrowBox.cpp  UIArrowBox.h  UIBottomWidget.cpp  UIBottomWidget.h  UIColorBox.cpp  UIColorBox.h  UICommandWidget.cpp  UICommandWidget.h  UICurrentActivePen.cpp  UICurrentActivePen.h  UIDialogFactory.cpp  UIDialogFactory.h  UIDimStyleBox.cpp  UIDimStyleBox.h  UIDimStyleListBox.cpp  UIDimStyleListBox.h  UIDimzerosBox.cpp  UIDimzerosBox.h  UIDoubleSpinBox.cpp  UIDoubleSpinBox.h  UIFileDialog.cpp  UIFileDialog.h  UIFontBox.cpp  UIFontBox.h  UIIntSpinBox.cpp  UIIntSpinBox.h  (+20 more)
YiCAD/support/ai/: 13-ai-assistant.md  intent_keywords.json
YiCAD/support/linetypes/: acad.lin  acadiso.lin
YiCAD/support/patterns/: acad.pat  acadiso.pat
YiCAD/ts/: YiCAD_en.ts  YiCAD_en_au.ts  YiCAD_zh_cn.ts
libraries/muparser/: CMakeLists.txt
libraries/muparser/src/: muParser.cpp  muParser.h  muParserBase.cpp  muParserBase.h  muParserBytecode.cpp  muParserBytecode.h  muParserCallback.cpp  muParserCallback.h  muParserDef.h  muParserError.cpp  muParserError.h  muParserFixes.h  muParserStack.h  muParserTemplateMagic.h  muParserToken.h  muParserTokenReader.h
plugins/: CMakeLists.txt
plugins/ts/: plugins_en.ts  plugins_en_au.ts  plugins_zh_cn.ts
(+391 files in other folders)
